Fixed Testimonial : Dots Gap Decreased And Also Made It Responsive For Different Devices

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.slick-dots li
+{
+    margin: 0;
+    gap: 0;
+    padding: 0;
+}
